--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: times new roman, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #cfedbb;
     text-align: center;
 }
 
