--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #cfedbb;
     color: white;
     padding: 10px;
     position: absolute;
