--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: times new roman, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #cfedbb;
+    background-color: #006400;
     text-align: center;
 }
 
