--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ body {
     font-family: times new roman, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #006400;
+    background-color: #F0FFF0;
     text-align: center;
 }
 
 header {
-    background-color: #cfedbb;
+    background-color: #006400;
     color: white;
     padding: 15px;
 }
@@ -33,7 +33,7 @@ main {
 }
 
 footer {
-    background-color: #cfedbb;
+    background-color: #006400;
     color: white;
     padding: 10px;
     position: absolute;
