--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: times new roman, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F0FFF0;
+    background-color: #F0FFF0;#006400;
     text-align: center;
 }
 
@@ -23,7 +23,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #006400;
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
