--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: times new roman, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F0FFF0;#006400;
+    background-color: white;
     text-align: center;
 }
 
