--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-    font-family: times new roman, sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F5F5DC;
+    background-color: #f4f4f4;
     text-align: center;
 }
 
 header {
-    background-color: #006400;
+    background-color: #007BFF;
     color: white;
     padding: 15px;
 }
@@ -33,7 +33,7 @@ main {
 }
 
 footer {
-    background-color: #006400;
+    background-color: #333;
     color: white;
     padding: 10px;
     position: absolute;
