--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,35 @@
 body {
-    font-family: Verdana;
+    font-family: Arial, sans-serif;
+    text-align: center;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    text-align: center;
 }
 
 header {
-    background-color: #006400; 
+    background-color: #028174;
     color: white;
-    padding: 15px;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 10px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-main {
     padding: 20px;
 }
 
+.logo {
+    max-width: 150px;
+    display: block;
+    margin: 0 auto;
+}
+
+#gebetszeiten, #beschreibung {
+    margin: 20px;
+    padding: 20px;
+    background: #f4f4f4;
+    border-radius: 10px;
+}
+
 footer {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
+    background: #028174;
+    color: white;
+    padding: 10px;
+    text-align: center;
 }
