--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    background: url('icons/icon-192x192.png') no-repeat center center fixed;
+    background-size: 300px; /* Größe des Logos anpassen */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.1; /* Transparenz des Logos als Wasserzeichen */
+
 }
 
 header {
