--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,16 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    background: src='icons/icon-192x192.png', no-repeat center center fixed;
-    background-size: 300px; 
+}
+body {
+    background: url('icons/icon-192x192.png') no-repeat center center fixed;
+    background-size: 250px; /* Größe des Wasserzeichens */
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    opacity: 0.1; 
-
+    opacity: 0.1; /* Transparenz */
 }
+
 
 header {
     background-color: #0275d8;
