--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,23 @@ nav ul li a {
     text-decoration: none;
 }
 
+.hadith-container {
+    max-width: 600px;
+    margin: 50px auto; /* Abstand zu den Rändern */
+    padding: 20px;
+    background-color: #f8f8f8;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.hadith-container h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #333;
+}
+
 .box {
     background: white;
     padding: 20px;
