--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #0275d8;
+    background-color: #028174;
     color: white;
     text-align: center;
     padding: 10px;
@@ -58,7 +58,7 @@ nav ul li a {
 }
 
 footer {
-    background: #333;
+    background: #028174;
     color: white;
     text-align: center;
     padding: 10px;
