--- a/styles.css
+++ b/styles.css
@@ -2,71 +2,33 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    background-color: #f8f9fa;
+    background-image: url('icons/icon-192x192.png');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.1;
 }
 
-header {
-    background-color: #028174;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-.hadith-container {
-    max-width: 600px;
-    margin: 50px auto; /* Abstand zu den Rändern */
+.container {
+    max-width: 800px;
+    margin: 0 auto;
     padding: 20px;
-    background-color: #f8f8f8;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.hadith-container h3 {
-    margin-bottom: 10px;
-    font-size: 18px;
-    color: #333;
-}
-
-.logo {
-    max-width: 100px;
-}
-
-nav ul {
-    list-style: none;
-    background: #028174;
-    padding: 10px;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.box {
     background: white;
-    padding: 20px;
-    margin: 20px;
-    border: 2px solid #0275d8;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
 }
 
 footer {
-    background: #028174;
-    color: white;
-    text-align: center;
-    padding: 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
