--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,24 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f8f9fa;
+    }
+body {
+    position: relative;
+}
 
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('icons/icon-192x192.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200px; /* Anpassbare Größe */
-    background-attachment: fixed;
-    opacity: 0.1; /* Macht das Wasserzeichen dezent */
-
+    opacity: 0.1; /* Wasserzeichen dezent machen */
+    z-index: -1; /* Setzt das Wasserzeichen in den Hintergrund */
 }
 
 .container {
