--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+/* Hintergrundbild als Wasserzeichen */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,14 +6,10 @@ body {
     background-color: #f4f4f4;
     color: #333;
     text-align: center;
-    background-image: url('icons/icon-192x192.png'); 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed; 
-    background-size: 200px;
+    position: relative; /* Wichtig für das Pseudo-Element */
 }
 
-
+/* Wasserzeichen wirklich im Hintergrund */
 body::before {
     content: "";
     position: fixed;
@@ -21,12 +17,13 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('icons/icon-192x192.png');
+    background-image: url('icons/icon-192x192.png'); /* Stelle sicher, dass der Pfad stimmt */
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 200px;
-    opacity: 0.05; 
-    z-index: -1; 
+    background-size: 150px;
+    opacity: 0.05; /* Noch unauffälliger */
+    z-index: -9999; /* Tiefster Hintergrund */
+    pointer-events: none; /* Verhindert, dass es über andere Elemente kommt */
 }
 
 
