--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,38 @@ body {
     background-attachment: fixed; 
 }
 
+#main-menu {
+    background: #007BFF;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000; /* Damit es über anderen Elementen liegt */
+}
+
+#main-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#main-menu ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+#main-menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+#main-menu ul li a:hover {
+    text-decoration: underline;
+}
 
 header {
     background: #333;
