--- a/styles.css
+++ b/styles.css
@@ -6,25 +6,13 @@ body {
 
 /* Kopfzeile mit Logo */
 header {
-    background-color: #0a3d62;
+    background-color: #2c3e50;
     color: white;
     text-align: center;
     padding: 10px 0;
     position: relative;
 }
 
-}
-
-/* Menüleiste fixieren */
-.navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #0a3d62;
-    padding: 10px 0;
-    text-align: center;
-    z-index: 1000;
-}
 #header-logo {
     position: absolute;
     left: 10px;
@@ -58,12 +46,6 @@ header {
 /* Farben für Texte */
 p {
     color: #333;
-}
-
-
-
-
-
 }
 
 /* Hadith-Anzeige */
