--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,44 @@
 body {
+    background-color: #f8f8f8;
     font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f4f4f4;
 }
 
 header {
-    background-color: #008000;
+    background-color: #004e00;
     color: white;
+    text-align: center;
     padding: 10px;
+    position: relative;
 }
 
-.header-logo {
+#logo {
     width: 50px;
-    height: 50px;
+    height: auto;
+    position: absolute;
+    left: 10px;
+    top: 10px;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
+h1 {
+    font-size: 24px;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 15px;
+.menu {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    background-color: #004e00;
 }
 
-#zeitAnzeige {
-    font-size: 1.5em;
+.menu a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
+.prayer-time {
+    font-size: 20px;
     font-weight: bold;
-    margin-top: 10px;
-}
-
-#gebetszeiten strong {
-    font-size: 1.2em;
-    color: #000;
 }
 
 
