--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 .menu {
     width: 100%;
-    background-color: #2E7D32; /* Grünton wie vorher */
+    background-color: #004e00
     text-align: center;
 }
 
