--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
-    background-color: #f8f8f8;
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #F4F4F4;
+    text-align: center;
 }
 
 .header-container {
@@ -9,6 +12,8 @@ body {
     align-items: center;
     text-align: center;
     padding: 10px;
+    background-color: #2E7D32;
+    color: white;
 }
 
 .logo {
@@ -19,8 +24,9 @@ body {
 
 .menu {
     width: 100%;
-    background-color: #004e00
+    background-color: #1B5E20;
     text-align: center;
+    padding: 10px 0;
 }
 
 .menu ul {
@@ -39,37 +45,31 @@ body {
     font-weight: bold;
 }
 
-
-.prayer-time {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-
-main {
+.gebetszeiten {
+    background: white;
     padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
 }
 
-h2, h3 {
-    color: #333;
-}
-
-ul {
-    padding: 0;
-    list-style: none;
-}
-
-ul li {
-    margin: 10px 0;
-    font-size: 1.2em;
-}
-
-footer {
-    background-color: #004e00;
-    color: white;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
+table {
     width: 100%;
+    border-collapse: collapse;
 }
 
+th, td {
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+.hadith-des-tages, .dua-des-tages {
+    background: white;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+.uhrzeit-container {
+    font-weight: bold;
+    font-size: 18px;
+}
