--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,53 @@
-/* Allgemeine Stile */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
-    color: #333;
+    background-color: #f4f4f4;
+    text-align: center;
 }
 
-/* Kopfzeile */
 header {
-    background-color: ##004e00;
+    background-color: #004e00;
     color: white;
-    padding: 10px 20px;
-    text-align: center;
+    padding: 10px;
+    position: relative;
 }
 
 .header-content {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
 }
 
 .logo {
     width: 40px;
     height: 40px;
+    margin-left: 10px;
+    opacity: 0.5;
 }
 
-/* Navigation */
 nav ul {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    background-color: #34495e;
 }
 
 nav ul li {
-    margin: 0;
-    padding: 10px 15px;
+    display: inline;
+    margin: 10px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-weight: bold;
 }
 
-/* Hauptinhalt */
-main {
+#prayer-times, #daily-hadith, #daily-dua {
+    background: white;
     padding: 20px;
-    text-align: center;
-}
-
-h2 {
-    color: #2c3e50;
-}
-/* Stil für die Stadtauswahl */
-#city-selection {
-    text-align: center;
-    margin-top: 15px;
+    margin: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 #city-select {
@@ -69,31 +57,4 @@ h2 {
     border-radius: 5px;
     background-color: white;
     cursor: pointer;
-}
-
-/* Stil für die Standortanzeige */
-#user-location {
-    font-weight: bold;
-    color: #2c3e50;
-    margin-top: 10px;
-}
-
-/* Gebetszeiten */
-#prayer-times ul {
-    list-style: none;
-    padding: 0;
-}
-
-#prayer-times ul li {
-    padding: 5px;
-    font-weight: bold;
-}
-
-/* Fußzeile */
-footer {
-    background-color: #004e00;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
 }
