--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,13 @@ nav ul li a {
     background-color: white;
     cursor: pointer;
 }
+footer {
+    background-color: #065535;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.9em;
+}
