--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ nav ul li a {
     cursor: pointer;
 }
 footer {
-    background-color: #065535;
+    background-color: #004e00;
     color: white;
     text-align: center;
     padding: 10px 0;
