--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-    background: #2c3e50;
+    background: #004e00;
     color: white;
     padding: 10px;
 }
@@ -41,7 +41,7 @@ td {
 
 footer {
     margin-top: 20px;
-    background: #2c3e50;
+    background: #004e00;
     color: white;
     padding: 10px;
 }
