--- a/styles.css
+++ b/styles.css
@@ -4,44 +4,39 @@ body {
 }
 
 header {
-    background: #004e00;
+    background-color: #004e00;
     color: white;
-    padding: 10px;
+    padding: 15px;
+    position: relative;
 }
 
-.logo {
-    width: 40px;
-    vertical-align: middle;
+#header-logo {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
 }
 
 nav ul {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
 }
 
 nav ul li {
     display: inline;
-    margin: 10px;
+    margin: 0 10px;
 }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-table {
-    margin: 10px auto;
-    border-collapse: collapse;
-}
-
-td {
-    padding: 5px;
-    border: 1px solid #ddd;
+main {
+    margin: 20px;
 }
 
 footer {
-    margin-top: 20px;
-    background: #004e00;
+    background-color: #004e00;
     color: white;
     padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
