--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@ header {
     position: relative;
 }
 
-#header-logo {
-    width: 50px;
-    height: 50px;
+.logo {
+    width: 40px;
+    height: 40px;
     position: absolute;
     right: 10px;
     top: 10px;
