--- a/stylesindex.css
+++ b/stylesindex.css
@@ -27,6 +27,34 @@ nav ul li {
     margin: 0 10px;
 }
 
+#gebetszeiten-und-feiertage {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 20px;
+}
+
+#gebetszeiten, #feiertage {
+    width: 48%;
+    background: white;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+th {
+    background-color: #004e00;
+    color: white;
+}
+
+.countdown-bold {
+    font-weight: bold;
+    color: red;
+}
+
 table {
     width: 40%;
     margin: 10px auto;
