--- a/stylesindex.css
+++ b/stylesindex.css
@@ -29,6 +29,7 @@ nav ul li {
 
 #gebetszeiten-und-feiertage {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
@@ -36,24 +37,23 @@ nav ul li {
 }
 
 #gebetszeiten, #feiertage {
-    width: 48%;
+    flex: 1;
+    min-width: 45%;
     background: white;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 
-
-th {
-    background-color: #004e00;
-    color: white;
-}
 
 .countdown-bold {
     font-weight: bold;
-    color: red;
+    color: black;
 }
+
+
 
 table {
     width: 40%;
