--- a/stylesindex.css
+++ b/stylesindex.css
@@ -43,7 +43,16 @@ nav ul li {
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
 
+@media (max-width: 768px) {
+    #gebetszeiten-und-feiertage {
+        flex-direction: column;
+    }
+
+    #gebetszeiten, #feiertage {
+        min-width: 100%;
+    }
 }
 
 
