--- a/stylesindex.css
+++ b/stylesindex.css
@@ -8,7 +8,7 @@ body {
 
 
 header {
-    background: url('icons/icon-192x192.png') no-repeat center center;
+    background: url('icons/hintergrund.png') no-repeat center center;
     background-size: cover;
     text-align: center;
     padding: 50px 0;
