--- a/stylesindex.css
+++ b/stylesindex.css
@@ -12,6 +12,7 @@ header {
     background-size: cover;
     text-align: center;
     padding: 100px 0;
+    opacity: 0.2;
 }
 
 #gebetszeiten-und-feiertage {
