--- a/stylesindex.css
+++ b/stylesindex.css
@@ -14,6 +14,7 @@ header {
    
     text-align: center;
     padding: 100px 0;
+     background-color: white;
    
 }
 
@@ -24,11 +25,12 @@ header {
     align-items: flex-start;
     gap: 20px;
     padding: 20px;
+     background-color: white;
 }
 
 #gebetszeiten, #feiertage {
     flex: 1;
-    min-width: 48%;
+    min-width: 100%;
     background: white;
     padding: 15px;
     border-radius: 8px;
@@ -54,6 +56,7 @@ header {
 nav ul {
     list-style-type: none;
     padding: 0;
+     background-color: White;
 }
 
 nav ul li {
