--- a/stylesindex.css
+++ b/stylesindex.css
@@ -8,12 +8,11 @@ body {
 
 
 header {
-   
     text-align: center;
     padding: 100px 0;
      background-color: white;
       background: url('icons/hintergrund.png') no-repeat center center;
-    background-size: cover;
+    background-size: auto;
      opacity: 0.01;
    
 }
