--- a/stylesindex.css
+++ b/stylesindex.css
@@ -9,6 +9,7 @@ body {
 
 header {
     text-align: center;
+    color: black;
     padding: 100px 0;
      background-color: white;
       background: url('icons/hintergrund.png') no-repeat center center;
