--- a/stylesindex.css
+++ b/stylesindex.css
@@ -9,7 +9,7 @@ body {
 header {
     background-color: #004e00; 
     background-image: url(icons/hintergrund.png);
-    height: 151px;
+    height: 50px;
     text-align: center;
     background-color: #004e00;
     color: white;
@@ -55,11 +55,15 @@ header {
 nav ul {
     list-style-type: none;
     padding: 0;
+    color: white;
+    padding: 20px;
 }
 
 nav ul li {
     display: inline;
     margin: 0 10px;
+    color: white;
+    padding: 20px;
 }
 
 
