--- a/stylesindex.css
+++ b/stylesindex.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     color: black;
+    text-align: center;
 }
 
 /* Hintergrundbild für Kopfzeile & Zeit-Sektion */
@@ -8,6 +9,7 @@ body {
     background: url('icons/hintergrund.png') no-repeat center center;
     background-size: cover;
     padding: 20px;
+    text-align: center;
 }
 
 /* Kopfzeile */
