--- a/stylesindex.css
+++ b/stylesindex.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     color: black;
     text-align: center;
+    background-color: black
 }
 
 /* Hintergrundbild für Kopfzeile & Zeit-Sektion */
